horizontally truncate promo addon titles in impala (bug 668372)

--- a/media/css/impala/promos.less
+++ b/media/css/impala/promos.less
@@ -324,6 +324,7 @@
         font-weight: bold;
         font-family: inherit;
         margin: .25em 0;
+        white-space: nowrap;
         text-align: center;
         overflow: hidden;
     }
@@ -341,6 +342,12 @@
         text-align: left;
         color: #373d48;
         margin: 0;
+        a {
+            color: #373d48;
+            &:hover {
+                text-decoration: none;
+            }
+        }
     }
 
     .html-rtl .addons p.desc {
